################################################################################
# Spectral Python (SPy) package change log
################################################################################

2013-02-14	tboggs <tboggs@users.sourceforge.net>

    Handle possible missing GLUT module and handle multiple wx series (2.8/2.9).
    
    * graphics/graphics.py (WindowProxy): New class.
    * graphics/ndwindow.py:
      (NDWindowProxy): Class now derived from WindowProxy.
      (NDWindow.__init__): Added new member _have_glut.
      (NDWindow.create_axes_list): Check if GLUT is present before making calls.
      (NDWindow.initgl): Handle missing GLUT.
      (NDWindow.on_resize): Use different GLContext conditions for wx 2.8/2.9.
    
2013-02-12	tboggs <tboggs@users.sourceforge.net>

    Enabled setting NDWindow features from command line.  Simplified window
    proxy interface, and fixed ND and hypercube window resizing.
    
    * graphics/graphics.py:
      (_next_window_data_proxy_id): Removed module variable.
      (_window_data_proxies): Removed module variable.
      (view_nd): Use `NDWindowProxy` object.
      (WindowData): Removed class.
      (WindowDataProxy): Removed class.
      (create_window_data_proxy_id): Removed function.
    * graphics/hypercube.py:
      (HypercubeWindow.on_resize): Remove GetContext check.
      (HypercubeWindow.resize): Added needed OpenGL.GLU import
    * graphics/ndwindow:
      (NDWindowProxy): New class to give user access to class labels and to set
        display features in an open NDWindow.
      (NDWindow.__init__): Remove obsolete proxy_id arg. Send EVT_SIZE to the
        frame instead of the GLCanvas.
      (NDWindow.on_event_close): Remove old proxy cleanup code.
      (NDWindow.set_data):  Remove old proxy cleanup code.
      (NDWindow.set_features): New method for user to set features from CLI.
      (NDWindow.on_resize): Remove GetContext check.
      (NDWindow.get_proxy): New method.